--- a/test/src/main/AndroidManifest.xml
+++ b/test/src/main/AndroidManifest.xml
@@ -1,6 +1,10 @@
-<manifest xmlns:android="http://schemas.android.com/apk/res/android" package="com.codesmyth.android.test">
+<manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    package="com.codesmyth.android.test">
 
-    <application android:allowBackup="true" android:label="@string/app_name" android:icon="@drawable/ic_launcher"
+    <application
+        android:allowBackup="true"
+        android:label="@string/app_name"
+        android:icon="@drawable/ic_launcher"
         android:theme="@style/AppTheme">
 
     </application>
