code gen for receivers, rename pkgs

--- a/common/src/main/AndroidManifest.xml
+++ b/common/src/main/AndroidManifest.xml
@@ -1,4 +1,4 @@
-<manifest package="com.codesmyth.android.common">
+<manifest package="com.codesmyth.droidcook.common">
 
     <application />
 </manifest>
