--- a/api/build.gradle
+++ b/api/build.gradle
@@ -1,21 +1,23 @@
 apply plugin: 'java'
-apply plugin: 'application'
 apply plugin: 'maven-publish'
 
-dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
-    compile 'org.ow2.asm:asm:4.1'
-    compile 'org.ow2.asm:asm-util:4.1'
+sourceCompatibility = 1.7
+version = '0.1'
+
+repositories {
+    mavenCentral()
 }
 
-mainClassName = "com.codesmyth.droidcook.asm.Main"
+dependencies {
+    testCompile group: 'junit', name: 'junit', version: '4.11'
+}
 
 publishing {
     publications {
         asm(MavenPublication) {
             groupId 'com.codesmyth.droidcook'
-            artifactId 'asm'
-            version '0.1-SNAPSHOT'
+            artifactId 'api'
+            version '0.1'
             from components.java
         }
     }
