--- a/common/build.gradle
+++ b/common/build.gradle
@@ -44,6 +44,7 @@ android {
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
+    compile 'javax.inject:javax.inject:1'
     compile 'com.android.support:appcompat-v7:21.0.3'
     compile 'com.android.support:support-v4:21.0.3'
     compile 'com.android.support:recyclerview-v7:21.0.3'
@@ -58,7 +59,7 @@ task sourceJar(type: Jar) {
 publishing {
     publications {
         common(MavenPublication) {
-            groupId 'com.codesmyth.android'
+            groupId 'com.codesmyth.droidcook'
             artifactId 'common'
             version '0.1-SNAPSHOT'
             artifact(sourceJar)
