--- a/compiler/build.gradle
+++ b/compiler/build.gradle
@@ -2,7 +2,7 @@ apply plugin: 'java'
 apply plugin: 'maven-publish'
 
 sourceCompatibility = 1.7
-version = '0.2'
+version = '0.3-SNAPSHOT'
 
 repositories {
     mavenCentral()
@@ -21,7 +21,7 @@ publishing {
         common(MavenPublication) {
             groupId 'com.codesmyth.droidcook'
             artifactId 'compiler'
-            version '0.2'
+            version '0.3-SNAPSHOT'
             from components.java
         }
     }
