remove deprecated, compiler updates

--- a/api/build.gradle
+++ b/api/build.gradle
@@ -1,42 +1,1 @@
-apply plugin: 'java'
-apply plugin: 'maven-publish'
-apply plugin: 'com.jfrog.bintray'
-
-sourceCompatibility = 1.7
-version = '0.3.3'
-
-repositories {
-    mavenCentral()
-}
-
-dependencies {
-    testCompile group: 'junit', name: 'junit', version: '4.11'
-}
-
-publishing {
-    publications {
-        api(MavenPublication) {
-            groupId 'com.codesmyth.droidcook'
-            artifactId 'api'
-            version '0.3.3'
-            from components.java
-        }
-    }
-    repositories {
-        maven {
-            url "$buildDir/repo"
-        }
-    }
-}
-
-bintray {
-    user = System.getenv('BINTRAY_USER')
-    key = System.getenv('BINTRAY_KEY')
-    publications = ['api']
-    pkg {
-        repo = 'maven'
-        name = 'droidcook'
-        licenses = ['BSD']
-        vcsUrl = 'https://github.com/dskinner/DroidCook.git'
-    }
-}
+apply plugin: "java"
