--- a/settings.gradle
+++ b/settings.gradle
@@ -1,5 +1,2 @@
-include ':common', ':asm', ':test'
-include 'compiler'
-
-include 'api'
-
+// https://docs.gradle.org/current/dsl/org.gradle.api.initialization.Settings.html
+include "api", "compiler", "common", "test"
