--- a/test/build.gradle
+++ b/test/build.gradle
@@ -1,60 +1,11 @@
-buildscript {
-    repositories {
-        jcenter()
-    }
-    dependencies {
-        classpath 'com.android.tools.build:gradle:1.1.0'
-    }
-}
-
-apply plugin: 'com.android.application'
-apply plugin: 'android-apt'
-
-repositories {
-    jcenter()
-    mavenLocal()
-}
+apply plugin: "com.android.application"
 
 android {
-    compileSdkVersion 23
-    buildToolsVersion "23.0.1"
-
-    compileOptions {
-        sourceCompatibility JavaVersion.VERSION_1_7
-        targetCompatibility JavaVersion.VERSION_1_7
-    }
-
-    defaultConfig {
-        applicationId "com.codesmyth.droidcook.test"
-        minSdkVersion 10
-        targetSdkVersion 23
-        versionCode 1
-        versionName "1.0"
-    }
-
-    packagingOptions {
-        exclude 'LICENSE.txt'
-    }
-
-    lintOptions {
-        abortOnError false
-    }
-
-    buildTypes {
-        release {
-            minifyEnabled false
-            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
-        }
-    }
+    defaultConfig { applicationId "com.codesmyth.droidcook.test" }
 }
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
-    compile project(':common')
     compile project(':api')
-    apt project(':compiler')
-
-    compile 'com.android.support:appcompat-v7:23.0.1'
-    testCompile 'junit:junit:4.12'
-    androidTestCompile 'com.android.support.test:testing-support-lib:0.1'
+    compile project(':common')
+    annotationProcessor project(':compiler')
 }
