--- a/compiler/build.gradle
+++ b/compiler/build.gradle
@@ -1,8 +1,28 @@
 apply plugin: "java"
+apply plugin: "maven-publish"
+apply plugin: "com.jfrog.bintray"
+
+project.sourceCompatibility = rootProject.ext.srcCompat
+project.bintray rootProject.ext.bintray
+
+publishing {
+    publications {
+        "$project.name"(MavenPublication) {
+            groupId project.group
+            artifactId "$project.name"
+            from components.java
+        }
+    }
+    repositories {
+        maven {
+            url "$buildDir/repo"
+        }
+    }
+}
 
 dependencies {
-    compile "com.google.android:android:4.1.1.4"
-    compile "com.google.auto.service:auto-service:1.0-rc3"
-    compile "com.squareup:javapoet:1.0.0"
-    compile project(":api")
+    implementation "com.google.android:android:4.1.1.4"
+    implementation "com.google.auto.service:auto-service:1.0-rc3"
+    implementation "com.squareup:javapoet:1.0.0"
+    implementation project(":api")
 }
